Added session state, information on session state to track number of changes to album catalog within session - AlbumController is now session scoped to account for this.

--- a/src/main/webapp/assets/templates/header.html
+++ b/src/main/webapp/assets/templates/header.html
@@ -16,9 +16,12 @@
                     <ul class="dropdown-menu">
                         <li><a><strong>Profiles:</strong> {{info.profiles.join()}}</a></li>
                         <li><a><strong>Services:</strong> {{info.services.join()}}</a></li>
+                        <li><a><strong>Instance:</strong> {{instance.instanceIndex}}</a></li>
+                        <li><a><strong># Session Mods: </strong> {{sessionInfo.modifyCount}}</a></li>
                     </ul>
                 </li>
             </ul>
+
         </div>
     </nav>
 </div>
